Sweep 2 - removed unnecessary JS selector - moved paragraph up - added some whitespace - added margin-bottom: 0; with important as a stop gap till Header PR merged

--- a/source/stylesheets/noble/partials/_primary-nav.scss
+++ b/source/stylesheets/noble/partials/_primary-nav.scss
@@ -13,6 +13,7 @@
     float: left;
     list-style: none;
     margin-left: 2em;
+    margin-bottom: 0 !important; // TEMP fix till other code merged in
     position: relative;
     a {
         &:link,
